Change Log:

7/21/09 - 3:40 am - Derrick
Added cute welcome sign.
Updated StandardPlayer to ask for name.
Commands can be read from prompt now.
New commands
	- try help
advworld.monsters has been updated with a MobNode